Avances en la renderización de conjuntos de Julia (#49)

--- a/memoria/tex/capitulos/capitulo-3.tex
+++ b/memoria/tex/capitulos/capitulo-3.tex
@@ -62,6 +62,7 @@ La dicotomía existente entre qué $z_0$ iniciales hacen que las iteradas de una
 Nuestro objetivo es entonces clasificar para qué $z_0\in\C$, las iteradas $\{P_c^n(z_0)\}$ convergen, divergen, ciclan, o tienen posiblemente un comportamiento caótico.
 
 \section{Conjuntos de Julia}
+\label{section:Julia}
 
 Sin dejar de tener en cuenta la familia de funciones $\{P_c(z)\}_{c\in\C}$ introducimos la siguiente definición.
 
