--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -50,6 +50,7 @@
 \newcommand{\dimsup}[0]{\overline{\dim}_B}
 \renewcommand{\Re}[0]{\mathrm{Re}\ }
 \renewcommand{\Im}[0]{\mathrm{Im}\ }
+\renewcommand{\H}[0]{\mathbb{H}}
 
 %MORE PACKAGES HERE
 \newcommand{\R}[0]{\mathbb{R}}
@@ -57,6 +58,7 @@
 \newcommand{\N}[0]{\mathbb{N}}
 \newcommand{\Z}[0]{\mathbb{Z}}
 \newcommand{\Q}[0]{\mathbb{Q}}
+
 
 \definecolor{background-blue}{rgb}{0.5,0.7,1.0}
 
