--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -51,4 +51,13 @@
 
 \bibitem{3D-SDFs} Quilez, I. (s. f.). \textit{3D SDFs}. Íñigo Quilez. Recuperado 14 de mayo de 2022, de \url{https://iquilezles.org/articles/distfunctions/}
 
+\bibitem{quaternions} Conway, J. H., Smith, D. A. (2003). \textit{On quaternions and octonions}. 21. CRC Press LLC.
+
+\bibitem{quaternion-product} Pharr, M., Jakob, W., Humphreys, G. (2017). \textit{Physically Based Rendering} (3rd ed.). 57-121. Morgan Kaufmann. \url{https://doi.org/10.1016/B978-0-12-800645-0.50002-6} 
+
+\bibitem{keenan-crane} Crane, K. (2005). Ray Tracing Quaternion Julia Sets on the GPU. \textit{University of Illinois at Urbana-Champaign}
+
+\bibitem{Hubbard-Douady} Douady, A., Hubbard, J. (2009). \textit{Exploring the Mandelbrot set. The Orsay Notes}.
+
+\bibitem{normals-sdf} Quilez, I. (s. f.-b). \textit{Normals for an SDF}. Íñigo Quilez. Recuperado 15 de mayo de 2022, de https://iquilezles.org/articles/normalsSDF/
 \end{thebibliography}
