Terminada sección de Mandelbub

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -26,6 +26,7 @@
 \usepackage{verbatim}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{tikz}
 %\usepackage[]{algorithm2e}
 \usepackage[spanish, es-tabla]{babel}
 \decimalpoint
