--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -59,5 +59,9 @@
 
 \bibitem{Hubbard-Douady} Douady, A., Hubbard, J. (2009). \textit{Exploring the Mandelbrot set. The Orsay Notes}.
 
-\bibitem{normals-sdf} Quilez, I. (s. f.-b). \textit{Normals for an SDF}. Íñigo Quilez. Recuperado 15 de mayo de 2022, de https://iquilezles.org/articles/normalsSDF/
+\bibitem{normals-sdf} Quilez, I. (s. f.-b). \textit{Normals for an SDF}. Íñigo Quilez. Recuperado 15 de mayo de 2022, de \url{https://iquilezles.org/articles/normalsSDF/}
+
+\bibitem{distance-fractals} Quilez, I. (2004). \textit{Distance to fractals}. Íñigo Quilez. Recuperado 16 de mayo de 2022, de \url{https://iquilezles.org/articles/distancefractals/}
+
+\bibitem{mandelbub} Quilez, I. (2009). \textit{Mandelbub}. Íñigo Quilez. Recuperado 16 de mayo de 2022, de \url{https://iquilezles.org/articles/mandelbulb/}
 \end{thebibliography}
