--- a/memoria/tex/capitulos/capitulo-8.tex
+++ b/memoria/tex/capitulos/capitulo-8.tex
@@ -372,6 +372,7 @@ Es difícil explicar y entender la génesis de esta fórmula, aunque los detalle
 Es decir, iterando el punto inicial y aplicando la transformación (\ref{eq:SDF-Julia}) podemos estimar a qué distancia se sitúa el punto del conjunto de Julia $\mathcal{J}_c$.
 
 \subsection{Aproximando la normal}
+\label{subsection:normal-sdf}
 
 Teniendo esta estimación de la distancia podemos calcular el posible punto de intersección de un rayp con $\mathcal{J}_c$, pero si queremos evaluar el modelo de iluminación en dicho punto, antes necesitamos conocer la normal a la superficie en dicho punto. Y aquí es donde tenemos que afrontar la dificultad que supone la propia belleza de los fractales, que es su irregularidad y que su superficie en general no es diferenciable. No existen formas de calcular de forma exacta esta normal, pero en realidad nosotros estamos fijando una resolución que limita el nivel de detalle de la figura, por lo que podemos utilizar ciertos métodos para aproximar esta normal.
 
@@ -573,3 +574,164 @@ En las imágenes \ref{fig:julia-3D} podemos ver algunos de los resultados que, d
     \label{fig:julia-3D}
 \end{figure}
 
+\section{Visualización tridimensional del conjunto de Mandelbrot}
+
+La pregunta más natural tras visualizar conjuntos de Julia es si podemos aprovechar todo el código que tenemos para, bajo ligeras modificaciones, visualizar lo que sería el conjunto de Mandelbrot en 3D. Afortunadamente, la respuesta es sí. Recordemos ahora la sección \ref{section:Mandelbrot}, en la cual definimos, en $\C$, al conjunto de Mandelbrot $\mathcal{M}$ de varias formas equivalentes, entre las que destacamos
+$$
+\mathcal{M}=\{c\in\C : \{P_c^n(0)\}\not\rightarrow\infty\}
+$$
+
+Por tanto, la manera de iterar $q$ y $q'$ cambia levemente. En lugar de utilizar $q$ como semilla e iterar $q^2+c$ con un $c\in\H$ fijo, utilizaremos a $0$ como semilla e iteraremos $q^2+c$ con $c=q$ inicial. La iteración de $|q'|$ también cambia, ya que intuitivamente la derivada de la función que iteramos es $2qq'+1$, por lo que ahora la sucesión sería $|q'_{i+1}|=2|q_i||q'_i|+1$, con $q'_0=0$. Puede consultarse una explicación más detallada de esta diferencia en \cite{distance-fractals}.Finalmente, tras suficientes iteraciones, se obtienen los valores $q_n$ y $q'_n$ necesarios en la SDF.
+
+\begin{lstlisting}
+// Itera la funcion P_c y obtiene tanto q_n como |q'_n|
+// q: Cuaternio que se itera
+// dq: Sucesion |q'_n|
+void iterate_mandelbrot(inout vec4 q, inout float dq) {
+    vec4 c = q;     // Constante inicialmente igual a q
+    q = vec4(0.0);  // Semilla inicial
+    for(int i = 0; i < MAX_STEPS; i++) {
+        dq = 2.0 * length(q) * dq + 1.0;
+        q = quat_square(q) + c;
+        if(dot(q, q) > 256.0) break;
+    }
+}
+\end{lstlisting}
+
+Salvo esta diferencia, la función que calcula la distancia de un punto al conjunto de Mandelbrot generalizado es idéntica a la utilizada en conjuntos de Julia: 
+$$
+d(p)=\dfrac{|q_n|\log|q_n|}{2|q'_n|},
+$$
+teniendo en cuenta las diferencias existentes entre estos $q_n$ y $q'_n$ con respecto a los utilizados en Julia.
+
+\begin{lstlisting}
+float get_dist_mandelbrot(vec3 p) {
+    float dist;
+    vec4 q = vec4(p.y, p.z, 0.0, p.x);
+    float dq = 0.0;
+    iterate_mandelbrot(q, dq);
+    float length_q = length(q);
+    return 0.5*length_q * log(length_q) / dq;
+}
+\end{lstlisting}
+
+Por su parte, los métodos para aproximar la normal descritos en la sección \ref{subsection:normal-sdf} son igualmente válidos no sólo para este caso sino realmente para cualquier superficie, ya que son considerados métodos estándar de cálculo de normales. Por tanto podemos reutilizarlos sin más que cambiar las llamadas a \verb|get_dist_julia| por llamadas a \verb|get_dist_mandelbrot|. 
+
+Y una vez tenemos estas funciones, podemos modificar \verb|ray_color| para que en lugar de utilizar las funciones de Julia utilice las de Mandelbrot. Sin embargo, en lugar de cambiar la actual, añadiremos funcionalidad. De igual manera que en la sección \ref{subsection:alternando} explicamos que añadiendo una variable \verb|uniform| la cual en función de su valor se renderizaba un conjunto u otro, en este caso haremos exactamente lo mismo, añadir una variable \verb|uniform| llamada \verb|u_fractal| y en función de su valor invocaremos la SDF y el método para calcular normales de Julia o de Mandelbrot.
+
+\begin{lstlisting}
+uniform int u_fractal; // 1: Julia, 2: Mandelbrot 
+\end{lstlisting}
+
+Tras esta pequeña modificación y darle a \verb|u_fractal| el valor $2$ mediante JavaScript, mostramos el resultado de estas operaciones en las imágenes \ref{fig:mandelbrot-3D}.
+
+\begin{figure}[ht]
+    \centering
+    \begin{tabular}{cc}
+        \includegraphics[scale=0.33]{img/C8/mandelbrot-2.png} &
+      \includegraphics[scale=0.33]{img/C8/mandelbrot-1.png} \\    
+    \includegraphics[scale=0.4]{img/C8/mandelbrot-3.png} &     \includegraphics[scale=0.25]{img/C8/mandelbrot-4.png} \\
+    \end{tabular}
+    \caption{Detalles del conjunto de Mandelbrot generalizado}
+    \label{fig:mandelbrot-3D}
+\end{figure}
+
+Hay que reconocer que el resultado es un poco decepcionante, parecería un cuerpo generado por la revolución de la frontera del conjunto de Mandelbrot en torno al eje $X$.
+
+\section{El conjunto de Mandelbub}
+
+Gracias a los cuaternios hemos podido generalizar la definición de los números complejos a 4D y visualizar en 3D proyecciones de los conjuntos de Julia y el conjunto de Mandelbrot. Sin embargo, la apariencia del conjunto de Mandelbrot nos ha dejado un mal sabor de boca, y es que dista bastante de la belleza que nos ofrecía $\mathcal{M}$ en dos dimensiones. En realidad, a día de hoy no se ha conseguido ninguna generalización matemáticamente correcta que posea la complejidad y la belleza del conjunto de Mandelbrot en 2D, aunque ha habido varios intentos. El conjunto de Mandelbub es uno de estos intentos. Es una generalización tridimensional del conjunto de Mandelbrot alejada del álbegra que ofrecen cuaternios, hipercomplejos y otros tipos de álgebras, a veces inconsistentes. 
+
+Pensemos en $P_c(z)=z^2+c$, esta vez con $z,c\in\C$ como la operación que, dado un complejo $z$ multiplica su módulo por sí mismo, duplica su argumento y suma una cierta constante $c$. Si recurrimos en 3D a las coordenadas esféricas, las cuales identifican un punto $p\in\R^3$ mediante su módulo $r$, el ángulo que forma con el eje $X$ $\phi$ y el ángulo que forma con el plano $y=0$ $\theta$, podemos extender esta operación. El procedimiento sería pasar el punto $(x,y,z)$ de coordenadas cartesianas a esféricas $(r,\phi,\theta)$, elevar al cuadrado $r$, duplicar $\phi$ y $\theta$ y devolver a coordenadas cartesianas. Es decir, tendríamos la composición 
+
+$$
+(x,y,z)\longmapsto(r,\phi,\theta)\longmapsto(r^2,2\phi,2\theta)\longmapsto(x',y',z')
+$$
+
+Realmente, el álgebra, las operaciones, las `derivadas' utilizadas en este procedimiento y en el cálculo de la distancia al objeto no tiene ningún rigor ni fundamento matemático, pero el resultado que produce es mucho más satisfactorio.
+
+De igual manera que utilizamos el $2$ como exponente, podemos usar cualquier otro. En este contexto lo más usual es usar el 8, ya que para exponentes más altos se tiende a la simetría y a detalles menos marcados. De manera que la transformación que usaremos entonces es 
+
+\begin{equation}
+    \label{eq:f-Mandelbub}
+    f=(x,y,z)\longmapsto(r,\phi,\theta)\longmapsto(r^8,8\phi,8\theta)\longmapsto(x',y',z')\longmapsto c + (x',y',z')
+\end{equation}
+
+
+El procedimiento, en lo que se refiere a iterar un punto para posteriormente estimar la distancia al objeto es bien parecido al ya conocido, solo que en este caso en lugar de utilizar la potencia y suma de cuaternios utilizamos la transformación (\ref{eq:f-Mandelbub}). Y claro está a la hora de calcular lo que entonces conocíamos como $q'$ la iteración cambia al haber cambiado el exponente. En este caso sería $|w'_{i+1}|=8|w|^7|w'|+1$, de forma que, dado un punto $w\in\R^3$, debemos calcular las iteraciones 
+\begin{equation}
+    \begin{split}
+        w_{i+1} &= f(w_i), w_0=w \\
+        |w'_{i+1}| &= 8|w|^7|w'|+1, w'_0=1
+    \end{split}
+\end{equation}
+Tomando para $f$ como $c$ el valor de $w$ inicial.
+
+Una vez $w$ y $|w'|$ han sido suficientemente iteradas, tenemos el punto $w_n$ y el módulo $|w'_n|$, dispuestos a aplicarle la SDF que de nuevo es la transformación \ref{eq:SDF-Julia}. Consúltese \cite{mandelbub} para más información sobre la SDF.
+
+Como dijimos anteriormente, el método del gradiente de la SDF y el método del tetraedro descritos en la sección \ref{subsection:normal-sdf} son igualmente válidos para cualquier superficie supuesta conocida su SDF. Por lo que podemos también calcular las normales al conjunto de Mandelbub a partir de estos métodos.
+
+La implementación necesaria para la visualización del conjunto de Mandelbub se basa en programar la función $f$ (la transformación \ref{eq:f-Mandelbub}), una función que itere un punto concreto y la sucesión de `derivadas', y una que invoque a la iteración y calcule la estimación de la distancia y una que calcule las normales.
+
+Respecto de la primera, podemos aprovechar que la GPU es muy rápida calculando funciones trigonométricas. Existen alternativas polinómicas que evitan el uso de trigonometría, la cual suele ser lenta en CPU, pero como en GPU suelen ser más rápidas, haremos uso de estas. 
+\begin{lstlisting}
+vec3 f_Mandelbub(vec3 w, vec3 c) {
+    // Coordenadas esfericas
+    float wr = sqrt(dot(w,w));
+    float wo = acos(w.y/wr);
+    float wi = atan(w.x,w.z);
+    // Escalado y rotacion
+    wr = pow( wr, 8.0 );
+    wo = wo * 8.0;
+    wi = wi * 8.0;
+    // Vuelta a coordenadas cartesianas
+    w.x = wr * sin(wo)*sin(wi);
+    w.y = wr * cos(wo);
+    w.z = wr * sin(wo)*cos(wi);
+    return c + w;
+}
+\end{lstlisting}
+
+Seguidamente, una función que invoque a \verb|f_Mandelbub| para iterar \verb|w| y \verb|dw|. Puede llamar la atención que en este caso se rompa el bucle cuando la longitud supera el valor 2 en contraste con los 16 que se utilizan en los conjuntos de Julia y Mandelbrot, pero se ha comprobado empíricamente que de esta forma los resultados son óptimos.
+
+\begin{lstlisting}
+// Itera un punto de R^3 segun la funcion f_Mandelbub y
+// calcula tambien la sucesion de derivadas
+void iterate_mandelbub(inout vec3 w, inout float dw){
+    float m;
+    vec3 c = w;
+    for(int i = 0; i < MAX_STEPS; i++) {
+        m = length(w);      // |z|
+        dw = 8.0*m*m*m*m*m*m*m*dw + 1.0; // 8*|z|^7*z' + 1.0
+        w = f_Mandelbub(w,c);   // w_n^8 + w_0
+        if(m > 2.0) break;     // |z| > 2
+    }
+}
+\end{lstlisting}
+
+Por último, la función que definitivamente dado un punto $p\in\R^3$ devuelve la distancia al conjunto de Mandelbub. 
+
+\begin{lstlisting}
+float get_dist_mandelbub(vec3 p) {
+    vec3 w = p;
+    float dw = 1.0;
+    iterate_mandelbub(w,dw);    // Iteramos w y dw
+    float length_w = length(w);        // |w|
+    return 0.5*length_w * log(length_w) / dw;
+}
+\end{lstlisting}
+
+Con este nuevo código junto con el necesario para calcular las normales y las modificaciones necesarias para que se renderice el conjunto de Mandelbub según el valor de \verb|u_fractal|, ya podemos visualizar el conjunto de Mandelbub. 
+
+\begin{figure}[ht]
+    \centering
+    \begin{tabular}{cc}
+        \includegraphics[scale=0.34]{img/C8/mandelbub-1.png} &
+      \includegraphics[scale=0.33]{img/C8/mandelbub-2.png} \\    
+    \includegraphics[scale=0.35]{img/C8/mandelbub-3.png} &     \includegraphics[scale=0.31]{img/C8/mandelbub-4.png} \\
+    \end{tabular}
+    \caption{Conjunto de Mandelbub}
+    \label{fig:mandelbub}
+\end{figure}
+
+Nótese como efectivamente mejora por mucho el resultado que nos ofrecía el conjunto de Mandelbrot generalizado a cuaternios de las imágenes \ref{fig:mandelbrot-3D}. Sin embargo, recordamos que el álgebra y el rigor utilizado para visualizarlo está lejos de ser correcto, siendo aún así el resultado más llamativo hasta ahora. Este es el colofón a toda la teoría y todas las implementaciones que se han hecho desde que se inició con un cuadrado de colores en el capítulo \ref{chap:renderizacion}, pudiendo al fin observar fractales tridimensionales desde distintas perspectivas, con distintos materiales y por tanto diferentes apariencias.
